# thevenin

./: CHANGELOG.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
docs/: 剩余时长预测与负载说明.md  模型理论微分方程.md  温度过高原因分析.md  设备功耗组件表.md  项目实现总结.md
docs/source/: conf.py
docs/source/development/: code_of_conduct.rst  issues_and_features.rst  project_overview.rst  tests_and_coverage.rst  version_control.rst
docs/source/user_guide/: basic_tutorial.ipynb
scripts/: B0005_inspect.txt  bayesian_tune_best_params_snippet.txt  bayesian_tune_params.py  bayesian_tune_result.json  device_power_components.py  inspect_mat.py  profile_tea2rc_gaming.csv  profile_tea2rc_reading.csv  profile_tea2rc_video.csv  requirements_tuning.txt  run_profile_tea2rc.py  simple_2rc_step_by_step.py  test.py  test_device_power.py  validate_V_T_result.json  validate_eod.py  validate_eod_result.json  validate_voltage_temperature.py  待验证参数清单.md  调参说明_已优化与未优化.md
src/thevenin/: _basemodel.py  _prediction.py  _simulation.py  _solutions.py
src/thevenin/_resources/: params_2rc_isothermal.yaml
