[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thevenin"
readme = "README.md"
dynamic = ["version"]
description = "Equivalent circuit models in Python."
keywords = ["ECM", "equivalent", "circuit", "model", "battery"]
requires-python = ">=3.10,<3.15"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Corey R. Randall" },
    { email = "corey.r.randall@gmail.com" },
]
maintainers = [
    { name = "Corey R. Randall" },
    { email = "corey.r.randall@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "ruamel.yaml",
    "scikit-sundae>=1.1.0",
]

[tool.setuptools.dynamic]
version = {attr = "thevenin.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thevenin = ["_resources/*.yaml"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-favicon",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "nox",
    "flake8",
    "autopep8",
    "codespell",
    "genbadge[all]",
    "thevenin[docs,tests]",
]

[project.urls]
Homepage = "https://github.com/NatLabRockies/thevenin"
Documentation = "https://thevenin.readthedocs.io"
Repository = "https://github.com/NatLabRockies/thevenin"
Issues = "https://github.com/NatLabRockies/thevenin/issues"
